# benchmark

./: README.md  benchmark.ipynb  benchmark.py  contract_case_summaries.json  generate_prompts.py  generated_prompts.txt  get_prompts_from_json.py  how_to_prompt_for_data.txt  llm_evaluation_results.csv  llm_predictions.csv  pyproject.toml
